alignment fix

--- a/css/styles.css
+++ b/css/styles.css
@@ -444,7 +444,6 @@ body {
 
 .download-list {
   list-style: none;
-  padding: 0;
   margin: 0;
 }
 
